deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: k8-workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: ghcr.io/ydataai/docker-workshop:1.1
        ports:
        - containerPort: 8080
          name: http
        resources:
          limits:
            cpu: 1
            memory: 200Mi
          requests:
            cpu: 500m
            memory: "100Mi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: k8-workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: ghcr.io/ydataai/bitnami-redis:7.0.11
        ports:
        - containerPort: 6379
          name: redis
        resources:
          limits:
            cpu: 1
            memory: 200Mi
          requests:
            cpu: 500m
            memory: 100Mi
        volumeMounts:
          - name: redis
            mountPath: /bitnami/redis/data
        # complete with the mount paths
      volumes:
      - name: redis
        persistentVolumeClaim:
          claimName: redis
      
      # bound to the persisten volume claim
