service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: k8-workshop
spec:
  selector:
    app: webapp
  ports:
  - name: http
    port: 80
    targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: k8-workshop
spec:
  selector:
    app: redisq
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
